--- a/frontend/src/app/styles/layout/_home.scss
+++ b/frontend/src/app/styles/layout/_home.scss
@@ -10,10 +10,71 @@
 }
 
 aside {
-    margin-left: 64px;
-    padding-left: 64px;
+    flex-shrink: 0;
+    margin-left: 28px;
+    padding-left: 28px;
     width: 280px;
     border-left: 1px solid #d7d7d7;
+
+    dl {
+        &:first-child {
+            margin-top: 20px;
+        }
+
+        margin-top: 44px;
+        border-bottom: 1px solid #dfdfdf;
+
+        dt {
+            font-size: $font-size-sm;
+            color: #4b587c;
+        }
+
+        dd {
+            padding-bottom: 24px;
+            margin-top: 24px;
+
+            .txt-nodata {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: $font-size-base;
+                height: 120px;
+            }
+        }
+    }
+
+    .search-terms {
+        dd {
+            .terms-list {
+                li {
+                    display: flex;
+                    gap: 0 10px;
+                    align-items: center;
+                    padding: 0 10px;
+                    margin-top: 8px;
+
+                    .search-link {
+                        font-size: $font-size-sm;
+                    }
+                }
+            }
+        }
+    }
+
+    .follow-terms {
+        .terms-list {
+            li {
+                display: flex;
+                align-items: center;
+                gap: 0 10px;
+                margin-bottom: 14px;
+                
+                .follow-link {
+                    font-size: $font-size-sm;
+                }
+            }
+        }
+    }
 }
 
 .post {
@@ -34,8 +95,9 @@ aside {
     }
 
     &__thum {
-        width: 62px;
-        height: 62px;
+        flex-shrink: 0;
+        width: 80px;
+        height: 80px;
         border-radius: 4px;
         background-color: #000;
         font-size: 2rem;
@@ -43,9 +105,10 @@ aside {
 
     &__item {
         display: flex;
-        gap: 0 26px;
+        gap: 0 20px;
+        padding: 0 12px;
         height: 80px;
-        margin-bottom: 20px;
+        margin-bottom: 28px;
         align-items: center;
         
         dl {
@@ -54,19 +117,27 @@ aside {
             }
     
             dd {
+                margin-top: 15px;
+
                 .d-list {
                     display: flex;
-                    margin-top: 10px;
+                    
                     align-items: center;
 
                     li {
                         position: relative;
                         display: flex;
                         align-items: center;
-                        font-size: 1.4rem;
+                        font-size: 1.3rem;
                         margin-right: 10px;
                         padding-right: 12px;
-                        color: #6c757d;
+                        color: #999;
+
+                        .co-number {
+                            font-size: 1.3rem;
+                            display: inline-block;
+                            margin-left: 5px;
+                        }
 
                         &:last-child {
                             &::after {
@@ -87,6 +158,23 @@ aside {
                         }
                     }
                 }
+            }
+        }
+
+        .btn-like {
+            margin-left: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 4px;
+            border: 1px solid #dfdfdf;
+
+            .like-number {
+                display: block;
+                margin-top: 2px;
             }
         }
         
