--- a/frontend/src/app/styles/layout/_header.scss
+++ b/frontend/src/app/styles/layout/_header.scss
@@ -29,4 +29,53 @@
         font-weight: $font-bold;
         background-color: #FF6154;
     }
+
+    .user-area {
+        position: relative;
+        margin-left: auto;
+        
+        .user-info {
+
+            width: 200px;
+            position: absolute;
+            top: 40px;
+            right: 0px;
+            padding: 20px 15px;
+            border-radius: 10px;
+            background-color: #fff;
+            border:1px solid #efefef;
+            box-shadow: $box-shadow;
+            z-index: 100;
+
+            ul {
+                li {
+                    display: flex;
+                    align-items: center;
+                    gap: 0 10px;
+                    margin-bottom: 20px;
+                    
+                    strong {
+                        &.user-name {
+                            font-size: $font-size-base;
+                        }
+
+                        font-weight: $font-bold;
+                        font-size: $font-size-sm;
+                    }
+
+                    .num {
+                        font-size: $font-size-base;
+                        color: #999;
+                    }
+                }
+                
+            }
+
+            .btn-login {
+                width: 100%;
+                height: 40px;
+            }
+        }
+    }
+
 }
