--- a/frontend/src/app/styles/layout/_home.scss
+++ b/frontend/src/app/styles/layout/_home.scss
@@ -14,13 +14,13 @@ aside {
     margin-left: 28px;
     padding-left: 28px;
     width: 280px;
-    border-left: 1px solid #d7d7d7;
 
     dl {
         &:first-child {
             margin-top: 20px;
         }
 
+        padding: 0 15px;
         margin-top: 44px;
         border-bottom: 1px solid #dfdfdf;
 
@@ -128,6 +128,7 @@ aside {
                         position: relative;
                         display: flex;
                         align-items: center;
+                        gap: 0 5px;
                         font-size: 1.3rem;
                         margin-right: 10px;
                         padding-right: 12px;
