--- a/frontend/src/app/styles/layout/_login.scss
+++ b/frontend/src/app/styles/layout/_login.scss
@@ -97,6 +97,36 @@
             text-align: center;
             font-size: 2.8rem;
         }
+
+        .img-avatar {
+            padding: 20px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            label {
+                display: block;
+                width: 80px;
+                height: 80px;
+                border-radius: 100%;
+                overflow: hidden;
+                cursor: pointer;
+
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit: 'cover'
+                }
+            }
+
+            input[type=file] {
+                opacity: 0;
+                position: absolute;
+                left: -99999px;
+                top:0px;
+            }
+            
+        }
     
         input[type=text],
         input[type=password] {
