--- a/frontend/src/app/styles/base/_reset.scss
+++ b/frontend/src/app/styles/base/_reset.scss
@@ -3,12 +3,14 @@ html,body,h1,h2,h3,h4,h5,h6,div,p,blockquote,pre,code,address,ul,ol,li,menu,nav,
 dl,dt,dd,table,thead,tbody,tfoot,label,caption,th,td,form,fieldset,legend,hr,input,button,textarea,object,figure,figcaption {
     margin:0;
     padding:0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: $notosans;
     font-size:10px;
     line-height: 1;
     color:#00142F;
     box-sizing: border-box;
+    font-optical-sizing: auto;
     font-weight: $font-regular;
+    font-style: normal;
 }
 
 html, body{
