--- a/frontend/src/app/styles/abstracts/_variables.scss
+++ b/frontend/src/app/styles/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 
 /* _variables.scss */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 
-$notosans: 'Roboto', 'Noto Sans KR', Arial, AppleGothic, verdana, sans-serif;
+$notosans: "Noto Sans KR", sans-serif;
 $path-img: '/images/';
 $path-img-common: $path-img + 'common/';
 $path-img-ico: $path-img + 'ico/';
