--- a/frontend/src/app/styles/layout/_home.scss
+++ b/frontend/src/app/styles/layout/_home.scss
@@ -87,6 +87,7 @@ aside {
 
         .tit {
             font-size: 2.4rem;
+            font-weight: $font-light;
         }
     }
 
@@ -114,6 +115,7 @@ aside {
         dl {
             dt {
                 font-size: 2rem;
+                font-weight: $font-light;
             }
     
             dd {
@@ -121,7 +123,6 @@ aside {
 
                 .d-list {
                     display: flex;
-                    
                     align-items: center;
 
                     li {
@@ -133,6 +134,7 @@ aside {
                         margin-right: 10px;
                         padding-right: 12px;
                         color: #999;
+                        font-weight: $font-thin;
 
                         .co-number {
                             font-size: 1.3rem;
