--- a/frontend/src/app/styles/layout/_login.scss
+++ b/frontend/src/app/styles/layout/_login.scss
@@ -81,6 +81,13 @@
 .signup {
     padding-top: 30px;
 
+    .btn-back {
+        display: block;
+        position: absolute;
+        left: 30px;
+        top: 30px;
+    }
+
     .signup-warp {
         display: flex;
         flex-direction: column;
