--- a/frontend/src/app/styles/layout/_header.scss
+++ b/frontend/src/app/styles/layout/_header.scss
@@ -33,6 +33,13 @@
     .user-area {
         position: relative;
         margin-left: auto;
+
+        .btn-user {
+            width: 32px;
+            height: 32px;
+            border-radius: 100%;
+            overflow: hidden;
+        }
         
         .user-info {
 
