--- a/frontend/src/app/styles/layout/_home.scss
+++ b/frontend/src/app/styles/layout/_home.scss
@@ -30,6 +30,7 @@ aside {
         }
 
         dd {
+            min-height: 144px;
             padding-bottom: 24px;
             margin-top: 24px;
 
@@ -37,7 +38,8 @@ aside {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                font-size: $font-size-base;
+                color: #999;
+                font-size: $font-size-xs;
                 height: 120px;
             }
         }
@@ -75,15 +77,55 @@ aside {
             }
         }
     }
+
+    .notice-terms {
+        li {
+            display: flex;
+            align-items: center;
+            gap: 0 10px;
+            margin-bottom: 14px;
+            
+            .notice-link {
+                max-width: 100%;
+                overflow:hidden;
+                text-overflow:ellipsis;
+                white-space:nowrap;
+                font-size: $font-size-sm;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    .edit-wrap {
+        padding: 0 30px;
+
+        .btn-post {
+            width: 100%;
+            height: 30px;
+            border-radius: 10px;
+            border: 1px solid #333;;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px 10px;
+            color: #333;
+            font-size: $font-size-sm;
+            gap: 0 5px;
+        }
+    }
+   
 }
 
 .post {
-    &__wrap {
-    }
-
     &__header {
         padding-bottom: 12px;
         border-bottom: 1px solid #d7d7d7;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
         .tit {
             font-size: 2.4rem;
@@ -102,6 +144,7 @@ aside {
         border-radius: 4px;
         background-color: #000;
         font-size: 2rem;
+        overflow: hidden;
     }
 
     &__item {
@@ -116,6 +159,12 @@ aside {
             dt {
                 font-size: 2rem;
                 font-weight: $font-light;
+
+                a {
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
             }
     
             dd {
@@ -136,6 +185,13 @@ aside {
                         color: #999;
                         font-weight: $font-thin;
 
+                        .user-img {
+                            width: 16px;
+                            height: 16px;
+                            border-radius: 100%;
+                            overflow: hidden;
+                        }
+
                         .co-number {
                             font-size: 1.3rem;
                             display: inline-block;
@@ -150,13 +206,13 @@ aside {
                         
                         &::after {
                             position: absolute;
-                            top: calc(100% / 2)px;
+                            top: 5px;
                             right: 0px;
                             display: block;
                             width: 3px;
                             height: 3px;
                             border-radius: 100%;
-                            background-color: #6c757d;
+                            background-color: #999;
                             content: ''
                         }
                     }
@@ -180,6 +236,274 @@ aside {
                 margin-top: 2px;
             }
         }
+
+
+        &.skeleton-loading {
+
+            .post__thum {
+                background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                background-size: 200% 100%;
+                background-position: 100% 0;
+                animation: load 1s infinite;
+            }
+
+            dl {
+                dt {
+                    border-radius: 5px;
+                    width: 200px;
+                    height: 20px;
+                    background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                    background-size: 200% 100%;
+                    background-position: 100% 0;
+                    animation: load 1s infinite;
+                }
+                
+                dd {
+                    margin-top: 15px;
+    
+                    .d-list {
+    
+                        li {
+                            border-radius: 5px;
+                            width: 100px;
+                            height: 16px;
+                            gap: 0 5px;
+                            background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                            background-size: 200% 100%;
+                            background-position: 100% 0;
+                            animation: load 1s infinite;
+                            
+                            &::after {
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .txt-noSearch {
+        display: flex;
+        align-items: center;
+        font-size: $font-size-sm;
+
+        .txt-word {
+            color: $color-primary;
+            font-weight: $font-bold;
+        }
+    
+        .btn-link {
+            margin-left: 20px;
+            padding: 10px;
+            border-radius: 5px;
+            color: #e2757a;
+            background-color: #fef6f2;
+            font-weight: $font-bold;
+        }
+    }
+
+    .observer {
+        height: 50px;
+    }
+}
+
+.post-form {
+
+    dl {
+        margin-top: 10px;
+        border-bottom: none;
+        padding: 0;
+
+        dt {
+            font-size: $font-size-base;
+        }
+
+        dd {
+            position: relative;
+            min-height: auto;
+
+            &.first {
+                margin-top: 0;
+                padding-bottom: 0;
+            }
+        }
+    }
+
+    input[type=text],
+    input[type=password] {
+        width: 100%;
+        height: 62px;
+        padding: 0 30px 0 30px;
+        border: none;
+        border-radius: 10px;
+        font-size: $font-size-base;
+        background-color: #f5f8ff;
+
+        &.wran {
+            border: 1px solid $color-danger;
+
+            &::placeholder {
+                color: $color-danger;
+            }
+        }
+    }
+    
+    textarea {
+        width: 100%;
+        height: 300px;
+        padding: 30px;
+        border: none;
+        border-radius: 10px;
+        font-size: $font-size-base;
+        background-color: #f5f8ff;
+        resize: none;
+
+        &.wran {
+            border: 1px solid $color-danger;
+
+            &::placeholder {
+                color: $color-danger;
+            }
+        }
+    }
+
+    .img-thumnail {
+        padding: 20px 0;
+        display: flex;
+        align-items: center;
+
+        label {
+            display: block;
+            width: 80px;
+            height: 80px;
+
+            overflow: hidden;
+            cursor: pointer;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: 'cover'
+            }
+        }
+
+        input[type=file] {
+            opacity: 0;
+            position: absolute;
+            left: -99999px;
+            top:0px;
+        }
+    }
+    
+    .btn-area {
+        width: 100%;
+        margin-top: 20px;
+
+        .btn-submit {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #FF6154;
+            color: #fff;
+            border-radius: 10px;
+            font-size: $font-size-base;
+            width: 100%;
+            height: 62px;
+        }
+    }
+
+    .txt-warn {
+        margin-top: 10px;
+        padding-left: 30px;
+        font-size: $font-size-sm;
+        color: $color-danger;
+    }
+}
+
+.detail {
+
+    &__userInfo {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 0 5px;
+    }
+
+    &__profile {
+        display: flex;
+        align-items: center;
+        gap: 0 10px;
         
+        .btn-user {
+            border-radius: 100%;
+            overflow: hidden;
+            width: 32px;
+            height: 32px;
+
+            &.skeleton-loading {
+                background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                background-size: 200% 100%;
+                background-position: 100% 0;
+                animation: load 1s infinite;
+            }
+        }
+
+        p {
+            font-size: $font-size-sm;
+        
+            &.skeleton-loading {
+                width: 100px;
+                height: 14px;
+                background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                background-size: 200% 100%;
+                background-position: 100% 0;
+                animation: load 1s infinite;
+            }
+        }
+    }
+
+    &__header {
+        margin-top: 40px;
+
+        h1 {
+            font-size: $font-size-lg;
+            font-weight: $font-bold;
+
+            &.skeleton-loading {
+                width: 200px;
+                height: 20px;
+                background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                background-size: 200% 100%;
+                background-position: 100% 0;
+                animation: load 1s infinite;
+            }
+        }
+    }
+
+    &__content {
+        margin-top: 30px;
+
+        p {
+            margin-bottom: 10px;
+            font-size: $font-size-sm;
+
+            &.skeleton-loading {
+                width: 400px;
+                height: 14px;
+                background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+                background-size: 200% 100%;
+                background-position: 100% 0;
+                animation: load 1s infinite;
+            }
+        }
+    }
+}
+
+
+
+@keyframes load {
+    100% {
+        background-position: -100% 0;
     }
 }
