--- a/frontend/src/app/styles/layout/_modal.scss
+++ b/frontend/src/app/styles/layout/_modal.scss
@@ -22,7 +22,7 @@
 .modal-wrap {
     position: relative;
     width: 500px;
-    height: 500px;
+    min-height: 500px;
     background-color: #fff;
     padding: 20px 40px;
     border-radius: 10px;
